Amended some Swagger annotations. Fixed issues with resending verification email (Added auth)
